--- a/main.vcxproj
+++ b/main.vcxproj
@@ -69,7 +69,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
     </ClCompile>
     <Link>
-      <OutputFile>.\Release/cpp_bit_array.exe</OutputFile>
+      <OutputFile>.\out_test/cpp_bit_array.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ProgramDatabaseFile>.\Release/cpp_bit_array.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
